--- a/main.css
+++ b/main.css
@@ -4,10 +4,15 @@ img {
 }
 
 body {
-    display: flex;
     justify-content: center;
     margin-top: 200px;
     background: linear-gradient(to left, rgb(237, 224, 224), rgb(217, 217, 228), rgb(219, 219, 198));
+}
+
+#imgContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 200px;
 }
 
 button {
@@ -26,4 +31,24 @@ button {
     position: fixed;
     right: 170px;
     bottom: 65%;
+}
+
+#dotsNav {
+    margin-top: 1%;
+    display: flex;
+    justify-content: center;
+}
+
+.dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 5px;
+  border-radius: 50%;
+  background-color: gray;
+  cursor: pointer;
+}
+
+.dotActive {
+  background-color: black;
 }
